--- a/src/Pages/GamePage/gamePage.css
+++ b/src/Pages/GamePage/gamePage.css
@@ -6,7 +6,21 @@
     height: calc(100vh - 13rem);
     width: 100%;
     margin: 0;
-    gap: 0;
+    gap: 5vh;
+}
+
+.questionWraper{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.answerWraper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10vh;
 }
 
 .question{
@@ -19,5 +33,4 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 1rem;
 }
